--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -4,7 +4,8 @@ nav {
     display: inline-flex;
     align-items: center;
     justify-content: space-around;
-    box-shadow: 0px 1px 6px 3px rgb(202, 202, 202);
+    box-shadow: 0px 1px 10px 1px rgb(22, 22, 22);
+    background-color: white;
 }
 
 .nav__right {
@@ -19,4 +20,16 @@ nav {
     padding-left: 0.4em;
 }
 
+@media screen and (min-width: 1050px) {
+
+    svg:hover {
+        cursor: pointer;
+        color: rgb(255,147,199);
+    }
+
+    .nav__right {
+        margin-left: 10em;
+    }
+    
+}
 
