--- a/src/Components/Nav/Search/Search.css
+++ b/src/Components/Nav/Search/Search.css
@@ -6,14 +6,22 @@
     padding-bottom: 0.6em;
     border-radius: 4em;
     width: 100%;
+    max-width: 50em;
 
     input{
         background-color: rgb(240,240,240);
         border: none;
-        width: 100%;
+        width: 99%;
+        margin-inline: 1%;
     }
 
     svg{
         padding-right: 0.1em;
+    }
+}
+
+@media screen and (min-width: 1050px) {
+    .searchbar{
+        margin-right: 2%;
     }
 }
