--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -32,6 +32,12 @@
     font-weight: 400;
   }
 
+  .loading-label{
+    margin-inline: auto;
+    text-align: center;
+    margin-top: 3em;
+  }
+
   @media only screen and (min-width: 1000px) {
 
     .header-text{
